# parallel-comp

./: README.md
FinalProject/: CMakeLists.txt  readme.txt
FinalProject/python_files/: all_positions.txt  all_positions_1-2.txt  all_positions_1.txt  all_positions_3.txt  all_positions_4.txt  graph.py  nbody.py  nbody_unopt.py  simulation.py  test.py
FinalProject/src/: nbody.cu
